--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "assert": "^2.0.0",
     "body-parser": "^1.20.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
@@ -18,6 +19,7 @@
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
