--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
-    "session-file-store": "^1.5.0"
+    "session-file-store": "^1.5.0",
+    "uuid": "^8.3.2"
   }
 }
