--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "mongoose": "^6.5.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "nanoid": "^3.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
     "session-file-store": "^1.5.0",
+    "shortid": "^2.2.16",
     "uuid": "^8.3.2"
   }
 }
